src/snapshots/linear_nets__test____home__fran__Projects__rust__linear-nets__tests__bimulticut.line__compilation.snap
---
source: src/test.rs
expression: "main_net.show_net(&show_agent, &mut scope, 0)"
---
With(One)[
    d
    False(d)[
        One
]
][
    d
    False(d)[
        One
]
]
