src/snapshots/linear_nets__test____home__fran__Projects__rust__linear-nets__tests__bimulticut.line__normalization.snap
---
source: src/test.rs
expression: "main_net.show_net(&show_agent, &mut scope, 0)"
---
With(One)[
    c
    False(c)[
        One
]
][
    c
    False(c)[
        One
]
]
